--- a/src/main/resources/static/ejemplo3.html
+++ b/src/main/resources/static/ejemplo3.html
@@ -10,9 +10,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <header style=" text-align: center;">
         <a href="ejemplo2.html">Atras</a>
         <a href="index.html">Home</a>
-        <a href="ejemplo3">Siguiente</a> <hr>
+        <a href="ejemplo4.html">Siguiente</a> <hr></header>
         <h1 style="text-align: center; background-color: black; color: white;">Ejemplo3</h1>
         <h2>La lista de Compras</h2>
         <ul>
